<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <RelativeLayout
                android:background="#3C94D1"
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="180dp">
                <ImageView
                    android:id="@+id/logoMytummy"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo_terus"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/judul_about"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/logoMytummy"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/font_barruuu"
                    android:text="ABOUT US"
                    android:textColor="#ffffff" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/penjelasanTeam"
                android:background="#F7F7F7"
                android:layout_below="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/penjelasan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:lineSpacingExtra="5dp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="12dp"
                    android:fontFamily="@font/font_barruuu"
                    android:gravity="center"
                    android:text="@string/penjelasan_aplikasi" />

                <TextView
                    android:id="@+id/versiApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_below="@id/penjelasan"
                    android:layout_centerHorizontal="true"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="12dp"
                    android:fontFamily="@font/font_barruuu"
                    android:gravity="center"
                    android:text="v.2.0.0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ourTeam"
                android:background="#EEF2F3"
                android:layout_below="@id/penjelasanTeam"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <RelativeLayout
                    android:id="@+id/ourTeam1"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/font_barruuu"
                        android:text="Our Team"
                        android:textColor="#3C94D1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/penjelasanOurTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_below="@id/text"
                        android:fontFamily="@font/font_barruuu"
                        android:lineSpacingExtra="5dp"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="12dp"
                        android:gravity="center"
                        android:text="@string/penjelasanTeam" />


                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ln1"
                    android:layout_below="@+id/ourTeam1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="NotSibling">


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:paddingBottom="20dp"
                        android:background="@drawable/shape"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/dendy" />

                        <TextView
                            android:id="@+id/nama1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/imageView1"
                            android:text="@string/nama1"
                            android:fontFamily="@font/font_barruuu"
                            android:textColor="#000000"
                            android:layout_centerHorizontal="true"
                            android:textSize="12sp"
                             />


                        <TextView
                            android:id="@+id/nim1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nama1"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/font_barruuu"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nim1"
                            android:textColor="#000000"
                            android:textSize="11sp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:paddingBottom="20dp"
                        android:background="@drawable/shape"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/indah" />

                        <TextView
                            android:id="@+id/nama2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/imageView2"
                            android:text="@string/nama2"
                            android:textColor="#000000"
                            android:fontFamily="@font/font_barruuu"
                            android:layout_centerHorizontal="true"
                            android:textSize="12sp"
                            />


                        <TextView
                            android:id="@+id/nim2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nama2"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nim2"
                            android:textColor="#000000"
                            android:fontFamily="@font/font_barruuu"
                            android:textSize="11sp" />

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ln2"
                    android:layout_below="@+id/ln1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="NotSibling">


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:paddingBottom="20dp"
                        android:background="@drawable/shape"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/naufal" />

                        <TextView
                            android:id="@+id/nama3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/imageView3"
                            android:text="@string/nama3"
                            android:layout_centerHorizontal="true"
                            android:textColor="#000000"
                            android:gravity="center"
                            android:fontFamily="@font/font_barruuu"
                            android:textSize="11sp"
                            />


                        <TextView
                            android:id="@+id/nim3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nama3"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nim3"
                            android:textColor="#000000"
                            android:fontFamily="@font/font_barruuu"
                            android:textSize="11sp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:paddingBottom="20dp"
                        android:background="@drawable/shape"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/saleh" />

                        <TextView
                            android:id="@+id/nama4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/imageView4"
                            android:text="@string/nama4"
                            android:textColor="#000000"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/font_barruuu"
                            android:textSize="11sp"
                             />


                        <TextView
                            android:id="@+id/nim4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nama4"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nim4"
                            android:fontFamily="@font/font_barruuu"
                            android:textColor="#000000"
                            android:textSize="11sp" />

                    </RelativeLayout>

                </LinearLayout>


<!--                <LinearLayout-->
<!--                    android:id="@+id/ln3"-->
<!--                    android:layout_below="@+id/ln2"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal"-->
<!--                    tools:ignore="NotSibling">-->


                    <RelativeLayout
                        android:layout_below="@id/ln2"
                        android:layout_width="200dp"
                        android:layout_margin="8dp"
                        android:layout_centerHorizontal="true"
                        android:paddingBottom="20dp"
                        android:background="@drawable/shape"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/bagrah" />


                        <TextView
                            android:id="@+id/nama5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/imageView5"
                            android:text="@string/nama5"
                            android:textColor="#000000"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/font_barruuu"
                            android:textSize="12sp"
                            />


                        <TextView
                            android:id="@+id/nim5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nama5"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nim5"
                            android:textColor="#000000"
                            android:fontFamily="@font/font_barruuu"
                            android:textSize="11sp" />

                    </RelativeLayout>


<!--                </LinearLayout>-->



            </RelativeLayout>

        </LinearLayout>
    </ScrollView>




</RelativeLayout>